--- a/package.json
+++ b/package.json
@@ -23,26 +23,6 @@
     "test": ""
   },
   "dependencies": {
-    "babel-plugin-check-es2015-constants": "^6.6.5",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
-    "babel-plugin-transform-es2015-block-scoped-functions": "^6.6.5",
-    "babel-plugin-transform-es2015-block-scoping": "^6.6.5",
-    "babel-plugin-transform-es2015-classes": "^6.6.5",
-    "babel-plugin-transform-es2015-computed-properties": "^6.6.5",
-    "babel-plugin-transform-es2015-destructuring": "^6.6.5",
-    "babel-plugin-transform-es2015-duplicate-keys": "^6.6.4",
-    "babel-plugin-transform-es2015-for-of": "^6.6.0",
-    "babel-plugin-transform-es2015-function-name": "^6.5.0",
-    "babel-plugin-transform-es2015-literals": "^6.5.0",
-    "babel-plugin-transform-es2015-object-super": "^6.6.5",
-    "babel-plugin-transform-es2015-parameters": "^6.6.5",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.5.0",
-    "babel-plugin-transform-es2015-spread": "^6.6.5",
-    "babel-plugin-transform-es2015-sticky-regex": "^6.5.0",
-    "babel-plugin-transform-es2015-template-literals": "^6.6.5",
-    "babel-plugin-transform-es2015-typeof-symbol": "^6.6.0",
-    "babel-plugin-transform-es2015-unicode-regex": "^6.5.0",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-plugin-transform-strict-mode": "^6.6.5"
+    "babel-preset-es2015": "^6.6.0"
   }
 }
